[package]
name = "flux-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio       = { version = "1", features = ["full"] }
mini-redis  = "0.4"
mongodb     = "2.7.0"
dotenv      = "0.15.0"
rocket      = {version = "0.5.0-rc.2", features = ["json"]}
serde       = {version = "1.0.130", features = ["derive"]}
